z-index issue fixed for selectbox

--- a/src/components/common/SelectBox/styles.scss
+++ b/src/components/common/SelectBox/styles.scss
@@ -20,6 +20,7 @@
     position: absolute;
     top: 40px;
     left: 0;
+    z-index: 1;
     li {
       list-style-type: none;
       padding: 10px 15px;
